--- a/docs/intro.wiki
+++ b/docs/intro.wiki
@@ -19,7 +19,7 @@ The standard file format used in GenomeComb is a simple tab delimited file
 names. This is very flexible and allows for fast parsing. Depending on the
 columns present, files can be used for various purposes. Usually the files
 are used to describe features on a reference genome sequence. The file
-extension .sft (simple feature table) or plain tsv can be used to refer to this format.
+extension .sft (simple feature table) or plain .tsv can be used to refer to this format.
 In this context, genomecomb gives following columns specific meanings:
 
 ; **chromosome** or **chrom**: chromosome name. Many genomecomb tools allow mixing chr1 and 1 notations
@@ -38,8 +38,8 @@ separated by commas.
 Most tools expect the files to be sorted on chromosme,begin,end,type and will create sorted files.
 You can sort files using the -s option of [[cg_select]].
 Not all the columns must be present, and any other columns can be added and searched. In 
-multigenome files, columns that are specific to a genome have -genomename append to the 
-column name. Some examples of (minimal) columns present for various genomecomb files:
+files containing data for multiple samples, columns that are specific to a sample have -samplename 
+appended to the column name. Some examples of (minimal) columns present for various genomecomb files:
 
 ; **region file**: chromosome begin end.
 ; **variant file**: chromosome begin end type ref alt ?alleleSeq1? ?alleleSeq2?
