--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -1,7 +1,7 @@
 = Select =
 
 == Format ==
-cg select ?options? ?infile? ?outfile?
+cg select ?options? ?datafile? ?outfile?
 
 == Summary ==
 Command for very flexible selection, sorting and conversion of tab separated files
@@ -13,7 +13,7 @@ The header line can be proceeded by comment lines that start with #. The comment
 will be included in the result. Other types of headers are supported (CGI style, vcf style)
 
 == Arguments ==
-; **infile**: file to be scanned, if not given, uses stdin. File may be compressed.
+; **datafile**: file to be scanned, if not given, uses stdin. File may be compressed.
 ; **outfile**: write results to outfile, if not given, uses stdout
 
 == Options ==
@@ -34,11 +34,14 @@ by the pattern.
 ; **-s sortfields**: sort on given fields (uses natural sort, so that e.g. 'chr1 chr2 chr10' will be sorted correctly)
 if **sortfields** is "-", the default sort fields will be used (chromosome,begin,end,type,alt).
 This will also accept name variations of the fields, such as chrom instead of chromosome.
+; **-sd sampledatafile**: a file in which extra information about the samples can be found (see further).
+If a file exists with the same root as the datafile, but with the extension .sampledata.tsv, it will be used
+as sampledatafile by default.
 ; **-nh newheader**: replace header in output with fields given by this option
 ; **-sh sepheader**: write a resultfile without header, and write the header into the file **sepheader**
 ; **-hc headerincomment**: if 1, the last of the starting comment lines will be used for the header instead of the first non-comment line. 
 If 2, the result file will also have the header in the last comment.
-; **-hf headerfile: infile does not have a header, the header will be read from **headerfile** instead
+; **-hf headerfile: datafile does not have a header, the header will be read from **headerfile** instead
 ; **-h**: return header fields in file
 ; **-n**: return sample names in file
 ; **-g groupfields**: with this option a summary table is returned. This will contain one line with 
@@ -278,6 +281,13 @@ un (unsequenced in some samples, variant in one of the others)
 ; **df(sample1,sample2, ...)**: different: variant in some, reference in other (all sequenced)
 ; **mm(sample1,sample2, ...)**: mismatch; variant in all, but different genotypes (all sequenced)
 ; **un(sample1,sample2, ...)**: unsequenced in some samples, variant in one of the others
+
+== Sampledatafile ==
+A sampledatafile is a tab delimited file containing extra information about the samples in the datafile.
+It should contain one column named id, that will contain the sample names. other fields contain the extra 
+data. You can use this information in most places where you use field values (queries, calculated fields, 
+grouping) using the $fieldname-sample construct, e.g. if there is a field gender in the sampledatafile (and not
+in the datafile, you can use $gender-sample1 to get the gender of sample1 in a query.
 
 == Queryfile ==
 A queryfile is a tab delimited file with a header describing a query. The output will contain 
