--- a/lib/cg_long.wiki
+++ b/lib/cg_long.wiki
@@ -21,5 +21,11 @@ lines (the common fields are repeated in each line).
 ; **infile**: file to be converted, if not given, uses stdin. File may be compressed.
 ; **outfile**: write results to outfile, if not given, uses stdout
 
+== Options ==
+; **-norm 1/0**: If 1, output "normalized" long tables: The normal output will contain only variant 
+data with a numeric id, without the data specific for each sample. 
+An extra tsv file is generated (<out>.sampledata.tsv) that contains the sample specific data, one line
+per variant (identified by the id) and sample (identified by a "sample" column)
+
 == Category ==
 Conversion
