--- a/lib/cg_multicompar.wiki
+++ b/lib/cg_multicompar.wiki
@@ -41,6 +41,11 @@ to be treated this way.
 == Options ==
 ; **-reannot**: Also do reannotation (see cg multicompar_reannot)
 ; **-reannotregonly**: Also do reannotation, but only region data (sequenced) will be updated
+; **-targetsfile variantfile**: All variants in **variantfile** will be in the final multicompar, even if
+they are not present in any of the samples. 
+A column will be added to indicate for each variant if it was in the targetsfile. The name of the 
+column will be the part of the filename after the last dash. If **variantfile** contains a "name" column, 
+the content of this will be used in the targets column instead of a 1.
 ; **-split**: if 1, multiple alternative alleles will be on a separate lines, treated mostly as a separate variant
 Use 0 for the default (alternatives alleles are on the same line, separated by comma in the alt field)
 ; **-listfields listfields**: fields given by listfields will be regarded as lists (comma separated) dependend on the different alt genotypes
