--- a/lib/cg_multicompar_reannot.wiki
+++ b/lib/cg_multicompar_reannot.wiki
@@ -1,7 +1,7 @@
 = Multicompar_reannot =
 
 == Format ==
-cg multicompar_reannot compar_file ?force? ?regonly? ?skipincomplete?
+cg multicompar_reannot ?options? compar_file ?force? ?regonly? ?skipincomplete?
 
 == Summary ==
 Reannotate multicompar file
@@ -32,6 +32,15 @@ containing the coverage and refscore for each position of the genome.
 
 == Arguments ==
 ; **compar_file**: multicompar file
+
+== Options ==
+; **-force 0/1**: if 1, all data will be updated, otherwise only unfilled (indicated with a ?) cells will be updated
+; **-regonly 0/1**: if the regonly option is used, only region data (sequenced) will be updated
+; **-skipincomplete 0/1**: go on even if data for some samples is not complete (skipping samples which are e.g. missing coverage data for some of the chromosomes)
+; **-paged pagesize**: reannot needs to keep a lot of files open, too many for multicompar files with a lot of samples. Using this
+option reannotation is done per group of **pagesize** samples. New files have to be written for each group
+
+Some options can also be given as words after the argument
 ; **force**: if present, all data will be updated, otherwise only unfilled (indicated with a ?) cells will be updated
 ; **regonly**: if the regonly option is used, only region data (sequenced) will be updated
 ; **skipincomplete**: go on even if data for some samples is not complete (skipping samples which are e.g. missing coverage data for some of the chromosomes)
