--- a/lib/cg_cat.wiki
+++ b/lib/cg_cat.wiki
@@ -20,7 +20,14 @@ the same fields as the first, an error is given, unless the merge or force optio
 each field that occurs in at least one of the source files. If a given field is not present in one of the source files,
 it will be empty for each line coming from this file.
 ; **-f**: if the force option is given, tab files with different fields will still be concatenated without error.
-; **-c 0/1**: if -c is 1 (default), the files that are concatenated are added in the comment, if 0 no extra comments are added.
+; **-s**: if the sort option is given, the files will be sorted (natural sort order) before being concatenated.
+This is usefull for e.g. concatenating files split over chromosomes in the correct order.
+; **-c 0/1**: if -c is 1 (default), the names of the files that are concatenated are added in the comment, 
+if 0 no extra comments are added. You can use the value f to only display the comment of the first file, 
+or n to leave out comments completely.
+
+By default (3), the comments of all files are added, with an extra comments showing the source file.
+Use 0 to remove all comments, 1 to add the comments of the first file only, 2 to add comments of all files
 
 == Category ==
 tsv
