help fix: add \ as escape, exclude {{{}}} from changes, fix ** in cg seelct help

--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -24,7 +24,7 @@ An asterix can be used to indicated several fields matching a pattern.
 A field starting with fieldname=formula will add a field with the given fieldname. The value in 
 the column will be calculated using the given formula. If the formula is complex (includes spaces), add
 braces around the entire field=formula.
-You can create multiple calculated fields in one go using wildcards (*,**,***,...), e.g.
+You can create multiple calculated fields in one go using wildcards (*,\*\*,\*\*\*,...), e.g.
 {{{freq-**=$count-**/double($total)}}} to calculate columns freq-sample1, freq-sample2, ... 
 for each sample for which a count-sample1, count-sample2, ... exists. Different patterns can be 
 combined using different number of asterisks. The example uses 2 asterisks. You can use 1, but have 
