--- a/lib/cg_homwes.wiki
+++ b/lib/cg_homwes.wiki
@@ -30,12 +30,15 @@ resultfileroot-sample.tsv
         this is needed if the annotcomparfile is not annotated (e.g. a vcf file)
 ; **-callers**: default is 'gatk-rdsbwa- sam-rdsbwa-'
 ; **-variantsonly**: only include positions wich are variant in the sample 
-               (so reference positions are discarded)
-; **-snpsonly**: only use variants of type snp
-; **-htz**: numner of heterozygous snps allowed per window
-; **-density**: plink --homozyg-density option
-; **-gap**: plink --homozyg-gap option
-; **-window**: plink --homozyg-window-snp option
+               (so reference positions are discarded) (default 0)
+; **-snpsonly**: only use variants of type snp (default 0)
+; **-filterrepeats**: filter out variants in microsatelites or (other) simple repeats (default 1)
+; **-genoqual**: filter out variants with a genoqual <= the given value (default 40)
+; **-htz**: numner of heterozygous snps allowed per window (default 1)
+; **-density**: plink --homozyg-density option (default 200)
+; **-gap**: plink --homozyg-gap option (default 4000)
+; **-window**: plink --homozyg-window-snp option (default 20)
 
 == Category ==
 Analysis
+
