--- a/lib/cg_liftchain2tsv.wiki
+++ b/lib/cg_liftchain2tsv.wiki
@@ -1,7 +1,7 @@
-= chain2tsv =
+= liftchain2tsv =
 
 == Format ==
-cg chain2tsv chainfile outputfile
+cg liftchain2tsv chainfile outputfile
 
 == Summary ==
 Converts data in UCSC chain file format (for liftOver) to a tsv (tab separated) format to be used
