--- a/lib/cg_correctvariants.wiki
+++ b/lib/cg_correctvariants.wiki
@@ -21,9 +21,10 @@ of giving an error.
 ; **dbdir**: database directory with reference sequence, etc.
 
 == Options ==
-; **-f 0/1/2**: if 1 (default 0), force overwrite of ref if it is different from the genome sequence in **dbdir**, 
+; **-f 0/1/2/3**: if 1 (default 0), force overwrite of ref if it is different from the genome sequence in **dbdir**, 
 instead of giving an error. "alt", "sequenced" and "zyg" columns are also corrected to reflect the new reference. 
-Use "2" to give a warning on the changes
+Use "2" to give a warning on the changes.
+Use "3" to recalculate everything even if ref is the same as the genome sequence (or not given).
 ; **-c 0/1**: if 1 (default 0), overwrite ref if it is different from the genome only when it is complement of ref, 
   alt and alleleSeq* are also changed to complement if ref is complement.
   This option is usefull for data originally coming from e.g. a snp array where variants are sometimes
